[gd_scene load_steps=4 format=3 uid="uid://bek5u6hspqgem"]

[ext_resource type="Theme" uid="uid://b6m5m23f256la" path="res://resources/theme.tres" id="1_mrf67"]
[ext_resource type="Script" path="res://scripts/UI/options_menu.gd" id="2_ars7o"]
[ext_resource type="AudioStream" uid="uid://xjsa7mxxyoag" path="res://assets/sounds/voice_lines/ui/adjusting_voice_volume.mp3" id="3_5mty4"]

[node name="OptionsMenu" type="HBoxContainer" node_paths=PackedStringArray("audio_player", "overall_volume_slider", "music_volume_slider", "sfx_volume_slider", "voice_volume_slider", "shadows_toggle_button", "subtitles_toggle_button", "light_environment_toggle_button", "full_screen_toggle_button")]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_mrf67")
script = ExtResource("2_ars7o")
voice_line = ExtResource("3_5mty4")
audio_player = NodePath("AudioStreamPlayer")
overall_volume_slider = NodePath("PanelContainer/VBoxContainer/Overall Volume/OverallVolumeSlider")
music_volume_slider = NodePath("PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/MusicSlider/MusicVolumeSlider")
sfx_volume_slider = NodePath("PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/SFXSlider/SFXVolumeSlider")
voice_volume_slider = NodePath("PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2/Voice Volume/VoiceVolumeSlider")
shadows_toggle_button = NodePath("PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer/Shadows")
subtitles_toggle_button = NodePath("PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer/Subtitles")
light_environment_toggle_button = NodePath("PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer2/Light Environment")
full_screen_toggle_button = NodePath("PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer2/Full Screen")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Options Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Overall Volume" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/Overall Volume"]
layout_mode = 2
theme_override_colors/font_color = Color(0.898039, 0.219608, 0.231373, 1)
text = "Overall Volume"

[node name="OverallVolumeSlider" type="HSlider" parent="PanelContainer/VBoxContainer/Overall Volume"]
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MusicSlider" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/MusicSlider"]
layout_mode = 2
theme_override_colors/font_color = Color(0.898039, 0.219608, 0.231373, 1)
text = "Music Volume"

[node name="MusicVolumeSlider" type="HSlider" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/MusicSlider"]
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="SFXSlider" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/SFXSlider"]
layout_mode = 2
theme_override_colors/font_color = Color(0.898039, 0.219608, 0.231373, 1)
text = "SFX Volume"

[node name="SFXVolumeSlider" type="HSlider" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/SFXSlider"]
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="VSeparator" type="VSeparator" parent="PanelContainer/VBoxContainer/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Voice Volume" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2/Voice Volume"]
layout_mode = 2
theme_override_colors/font_color = Color(0.898039, 0.219608, 0.231373, 1)
text = "Voice Volume"

[node name="VoiceVolumeSlider" type="HSlider" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2/Voice Volume"]
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
modulate = Color(0, 0, 0, 0)
layout_mode = 2
theme_override_constants/separation = 9

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 0

[node name="Shadows" type="CheckButton" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_colors/font_pressed_color = Color(0.827451, 0.827451, 0.827451, 1)
theme_override_colors/font_color = Color(0.827451, 0.827451, 0.827451, 1)
button_pressed = true
text = "Shadows"

[node name="Subtitles" type="CheckButton" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_colors/font_pressed_color = Color(0.827451, 0.827451, 0.827451, 1)
theme_override_colors/font_color = Color(0.827451, 0.827451, 0.827451, 1)
button_pressed = true
text = "Subtitles"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0
alignment = 1

[node name="Light Environment" type="CheckButton" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_colors/font_pressed_color = Color(0.827451, 0.827451, 0.827451, 1)
theme_override_colors/font_color = Color(0.827451, 0.827451, 0.827451, 1)
text = "Lighter Environment"

[node name="Full Screen" type="CheckButton" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_colors/font_pressed_color = Color(0.827451, 0.827451, 0.827451, 1)
theme_override_colors/font_color = Color(0.827451, 0.827451, 0.827451, 1)
text = "Fullscreen"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = &"Voice Protagonist"

[connection signal="value_changed" from="PanelContainer/VBoxContainer/Overall Volume/OverallVolumeSlider" to="." method="_on_overall_volume_slider_value_changed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/MusicSlider/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/SFXSlider/SFXVolumeSlider" to="." method="_on_sfx_volume_slider_value_changed"]
[connection signal="drag_started" from="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2/Voice Volume/VoiceVolumeSlider" to="." method="_on_voice_volume_slider_drag_started"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2/Voice Volume/VoiceVolumeSlider" to="." method="_on_voice_volume_slider_value_changed"]
[connection signal="toggled" from="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer/Shadows" to="." method="_on_shadows_checkbox_toggled"]
[connection signal="toggled" from="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer/Subtitles" to="." method="_on_subtitles_toggled"]
[connection signal="toggled" from="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer2/Light Environment" to="." method="_on_light_environment_toggled"]
[connection signal="toggled" from="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer2/Full Screen" to="." method="_on_full_screen_toggled"]
